--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nikhil's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <meta name="description" content="Nikhil Govindaraju — Full Stack Developer & MSCS @ USC. Building scalable cloud-native systems, modern web apps, and AI-powered solutions." />
+    <meta name="keywords" content="Nikhil Govindaraju, Full Stack Developer, React, Node.js, AWS, USC, Software Engineer" />
+    <meta property="og:title" content="Nikhil Govindaraju — Full Stack Developer" />
+    <meta property="og:description" content="MSCS @ USC | 2+ years building scalable full-stack solutions." />
+    <meta property="og:type" content="website" />
+    <title>Nikhil Govindaraju — Full Stack Developer</title>
+
     <link rel="icon" type="image/png" href="/favicon.png" />
 
+    <!-- Space Grotesk (headings) + Inter (body) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
